adicionando a parte de mostrar os calculos e a oprecao de porcentagem.

--- a/src/components/Calculadora/styles/Visor.module.css
+++ b/src/components/Calculadora/styles/Visor.module.css
@@ -1,15 +1,26 @@
 .visor {
   width: 270px;
-  height: 60px;
   align-items: center;
   justify-content: right;
   display: flex;
+  height: 60px;
+  flex-direction: column;
   padding: 5px;
   margin: 5px;
   background-color: grey;
   border: 1px solid aliceblue;
   border-radius: 10px;
   font-size: 20px;
-  letter-spacing: 3px;
   overflow: hidden;
+}
+.visorOperacao {
+  margin-right: auto;
+  margin-bottom: auto;
+  color: #d4c8c8;
+  letter-spacing: 4px;
+}
+.visorText {
+  letter-spacing: 2px;
+  width: 260px;
+  text-align: right;
 }
